# nodriver-proxy-mcp

./: .gitignore  .mcp.json  README.md  README_ko.md  pyproject.toml
.claude/: settings.local.json
src/nodriver_proxy_mcp/: __init__.py  main.py  sdk.py
src/nodriver_proxy_mcp/browser/: daemon.py  session_manager.py  tools.py
src/nodriver_proxy_mcp/codemode/: tools.py
src/nodriver_proxy_mcp/proxy/: _mitm_addon.py  controller.py  fuzzer.py  recorder.py  scope.py  tools.py
