[project]
name = "nodriver-proxy-mcp"
version = "4.0.1"
description = "Unified MCP Server for Web Security — 39 tools for autonomous pentesting"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "BobongKu"}]
requires-python = ">=3.10, <3.14"
keywords = [
    "mcp", "mcp-server", "pentesting", "security", "proxy",
    "mitmproxy", "browser-automation", "nodriver", "web-security",
    "vulnerability-scanner", "burp-suite", "cdp", "interception",
    "fuzzing", "idor", "xss", "ai-agent", "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "mitmproxy>=10.0.0",
    "nodriver>=0.38.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "jsonpath-ng>=1.6.0",
    "curl-cffi>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/BobongKu/nodriver-proxy-mcp"
Repository = "https://github.com/BobongKu/nodriver-proxy-mcp"
Issues = "https://github.com/BobongKu/nodriver-proxy-mcp/issues"

[project.scripts]
nodriver-proxy-mcp = "nodriver_proxy_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nodriver_proxy_mcp"]
